Fixed the gaps

--- a/src/components/Dishes/styles.module.css
+++ b/src/components/Dishes/styles.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap: 5em;
+    padding: 20vh 0 20vh 0;
 }
 
 #flip{
